2010-02-24 17:55-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/ControlsPalette.tiff
	* Palettes/4Data/DataPalette.tiff: Remove background and replace
	with alpha.

2010-02-12 20:01-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormFunctions.m: Correct the function which enumerates
	over the list of methods in a class when adding from a palette.

2010-02-08 07:13-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Gorm.m: Separate out the server methods into a category.

2010-02-08 06:46-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormServer.h: Added deleteClass: method
	* Gorm.m: Added implementation for deleteClass:

2010-02-07 05:43-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GNUmakefile: Added GormServer.h to the headers.
	* GormCore/GormCustomClassInspector.m: Change tooltip when
	a new custom class is selected from the list.
	* GormCore/GormPalettesManager.m: Set autoresizing on drag view.
	* GormCore/GormServer.h: Protocol for GormServer.
	* GormCore/GormViewEditor.m: Add the class name to the 
	tooltip.
	* Gorm.m: Vend the object so that other apps can talk 
	to Gorm via DO.

2010-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/2Controls/ControlsPalette.gorm:
	Replace the two orphaned radio buttons by a NSMatrix.

2010-01-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/2Controls/GormButtonAttributesInspector.m(-ok:, -revert:):
	Fix the NSButton inspector to use \r as key equivalent for the
	Return key.

	* GormCore/GormViewWithContentViewEditor.m (-ungroup):
	* GormCore/GormSplitViewEditor.m (-ungroup, -destroyAndListSubviews):
	Remove the former container view from its parent after an ungroup
	operation.

2010-01-14 06:46-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocumentWindow.m: Make window unable to become main.
	This is so that the document window will not receive the menu
	on Windows.